--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8"/>
     <title>Plantilla</title>
@@ -16,6 +18,8 @@
             <a th:href="@{/(lang=en)}">EN</a> |
             <span> [[#{plantilla.pie-pagina}]] <a href="#">Link</a></span>
             <form method="post" th:action="@{/logout}">
+                <b>User: </b><span sec:authentication="name">Usuario que hizo login</span> |
+                <b>Roles: </b> <span sec:authentication="principal.authorities">Roles</span> |
                 <a href="#" onclick="this.parentNode.submit();">Logout</a>
             </form>
         </div>
